syntax = "proto3";

package com.softwaremill.test.domain;

import "akkaserverless/annotations.proto";

option java_outer_classname = "EmailsDomain";

option (akkaserverless.file).value_entity = {
  name: "Emails"
  entity_type: "emails"
  state: "EmailsState"
};

message EmailsState {
  string user_id = 1;
  string password_salt = 2;
  string password_hash = 3;
}
